--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="body">
       <div id="header">
-        OSINT Framework
+        Horus Eye OSINT Framework
           <hr/>
       </div>
     </div>
